--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.5",
+    "react-icons": "^4.3.1",
     "sass": "^1.39.0",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^2.2.11",
