--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-MY_HEROKU_URL=https://agrello-e-fernandes-admin.herokuapp.com
+NEXT_PUBLIC_MY_HEROKU_URL=https://agrello-e-fernandes-admin.herokuapp.com
+NEXT_PUBLIC_FORM_KEY=
